# honours

./: ProjectHome.md  task.tsk
Application/: Full Detailed CV.doc  coverletter for Kelvin.doc
Application/sun Ambassador/: CV for Kelvin.doc  cover letter.doc
Dissertition/: thesis.doc
Dissertition/report/: presentation.ppt  progress report 26 Mar.doc  thesis.doc
Dissertition/report/pic/: Thumbs.db  dataFramework.vsd
Dissertition/sourcecode/: handwriting.c
Dissertition/sourcecode/hmmhandwriting/: .project  Constants.h  State.h  Stroke.h  Viterbi.h  Viterbi20070410.h  Word.h  copyString  handwriting.c  math  optimise.cpp  quantilise.c  quantilise.cpp  quantiliseReco.cpp  readme.txt  recognise.cpp  stroke.h  testReadDirecotry.cpp  word.h  writingpad
FIT2006SummerScholarship/: 07 Vac Res Scholarship_Application.doc  07 Vacation_Scholarships_Guidelines.doc
ITN100/Assignment/LitReview/: literature review.doc
ITN100/Assignment/Presentation/: Abstract.doc  Research questions.doc  presentation.ppt  script.doc
ITN100/Assignment/Proposal/: proposal.doc
ITN100/End Note Lib/: honours.enl
ITN100/Gevin/: 2006-S1 Final Proposal - Gavin.doc  Lit Review.doc
ITN770/770 assign1/: presentation.ppt
ITN770/770 assign1/ChengZhou/: Contribution sheet.xls
ITN770/770 assign1/spec/: ITN770InvestigativeAssignment.doc
summer project/keywordAbstraction/: keyword.xls
tags/20070609/tomoe/libtomoe-gtk-0.3.0/: AUTHORS  README  configure.ac
tags/20070609/tomoe/libtomoe-gtk-0.3.0/po/: POTFILES.in  libtomoe-gtk.pot
tags/20070609/tomoe/libtomoe-gtk-0.3.0/src/: tomoe_dictionary_page.c  tomoe_edit_char.c  tomoe_edit_meta.c  tomoe_stroke_search.c  tomoe_window.h
tags/20070609/tomoe/libtomoe-gtk-0.3.0/test/: Makefile.am
task/: qldws.tsk  task.tsk
tomoe/libtomoe-gtk-0.1.0/: libtomoe-gtk.lang  libtomoe-gtk.pc
tomoe/libtomoe-gtk-0.1.0/src/: Makefile.am  Makefile.in  tomoe_candidates_view.h  tomoe_canvas.h
tomoe/libtomoe-gtk-0.1.0/src/.deps/: tomoe_window.Plo
tomoe/libtomoe-gtk-0.1.0/src/.libs/: libtomoe-gtk.so.0.0.0
tomoe/libtomoe-gtk-0.3.0/: ChangeLog  Makefile.am  Makefile.in  configure
tomoe/libtomoe-gtk-0.3.0/src/: Makefile.am  tomoe_canvas.h  tomoe_details.c  tomoe_dictionaries_page.c  tomoe_edit_strokes.c  tomoe_reading_search_page.c  tomoe_reading_search_page.h  tomoe_stroke_search.c  tomoe_stroke_search.h
trunk/Application/: CV for Kelvin.doc  Full Detailed CV.doc  Template CV.doc  Template CoverLetter.doc  coverletter for Kelvin.doc
trunk/Dissertition/: progress report 11 Oct.doc
trunk/FIT2006SummerScholarship/: 07 Vac Res Scholarship_Application.doc
trunk/summer project/: report.doc  ~$report.doc
trunk/task/: qldws.tsk  task.tsk
work/springMVC/: .classpath
(+2299 files in other folders)
